--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@emotion/core": "^10.0.7",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "antd": "^3.13.2",
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.1.0",
     "gatsby-image": "^2.0.29",
+    "gatsby-plugin-less": "^2.0.11",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.23",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-remark-code-titles": "^1.0.2",
     "gatsby-remark-copy-linked-files": "^2.0.9",
@@ -24,13 +30,16 @@
     "gatsby-transformer-remark": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.13",
     "katex": "^0.10.0",
+    "less": "^3.9.0",
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-helmet": "^5.2.0",
+    "react-toolbox": "^2.0.0-beta.13",
     "react-typography": "^0.16.18",
+    "styled-components": "^4.1.3",
     "typography": "^0.16.18",
     "typography-theme-kirkham": "^0.16.18"
   },
